[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvalidx"
version = "0.1.0"
description = "Custom field validation"
authors = [
    { name = "Harrison Alonso Arroyave Gaviria", email = "harrisonarroyaveg@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/harrsion-gaviria/pyvalidx"
Issues = "https://github.com/harrsion-gaviria/pyvalidx/issues"

[tool.setuptools.packages.find]
where = ["src"]
